[package]
name = "laxcow"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Clone-on-write smart pointer with relaxed trait constraints"
homepage = "https://github.com/kauppie/laxcow/tree/main"
documentation = "https://docs.rs/laxcow"
repository = "https://github.com/kauppie/laxcow/tree/main"
readme = "README.md"
keywords = ["cow", "no_std"]
categories = ["rust-patterns", "no-std"]
exclude = ["/.github/", "/logo.png"]

[features]
default = ["alloc"]
alloc = []
